@@ -20,7 +20,7 @@ class Lifestream_FlickrFeed extends Lifestream_PhotoFeed
 
 	function get_url()
 	{
-		return 'http://api.flickr.com/services/feeds/photos_public.gne?id='.$this->get_option('user_id').'&format=rss_200';
+		return 'http://api.flickr.com/services/feeds/photos_public.gne?id='.$this->get_option('user_id');
 	}
 
 	function yield($row, $url, $key)
